--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,7 @@
-output/
-
-output/production
-output/artifacts
-
+target/
 workspace/
-
-workspace/assets/
-workspace/config/
-workspace/libraries/
-
-workspace/crash-reports/
-workspace/logs/
-
-workspace/screenshots
-workspace/resourcepacks
-workspace/shaderpacks
-
-workspace/saves
-
-workspace/Tenacity
 
 *.xml
 *.iml
 
-./idea
+.idea/
